chore: fix scrollbar

--- a/projects/kit/components/input-tag/input-tag.style.less
+++ b/projects/kit/components/input-tag/input-tag.style.less
@@ -38,7 +38,7 @@
     padding-inline-end: 0.5rem;
 
     &_expandable {
-        overflow-y: hidden;
+        overflow: hidden;
     }
 
     :host._expandable & {
